--- a/Fluids.tex
+++ b/Fluids.tex
@@ -25,6 +25,7 @@
 \usepackage{tocloft}
 \geometry{letterpaper, margin=2.54cm}
 \begin{document} 
+\pgfplotsset{compat=1.18}
 \setstretch{2}
 \begin{titlepage}
 	\centering
@@ -34,7 +35,7 @@
 	\textbf\large\scshape{\par}
 	\vspace{3cm}
 
-	{\Large Vergara Pareja Gustavo\\Pacheco Berrio Jhosuea\\Petro Yanéz Edwin\par}
+	{\Large Vergara Pareja Gustavo\\Valdéz Godin Aldair\\Pila Mendoza José\par}
 	\vspace{5cm}
 	{\scshape\Large Programa de Ingeniería Mecánica \par}
 	{\scshape\Large Universidad de Córdoba\par}
@@ -92,7 +93,7 @@ la cual establece que, ``La fuerza de flotación que actúa sobre un cuerpo sume
 al peso del fluido desplazado por el cuerpo y actúa hacia arriba pasando por el
 centroide del volumen desplazado. Para los cuerpos flotantes, el peso del cuerpo completo debe ser igual a la fuerza
 de flotación ($F_{e}$), la cual es el peso del fluido ($W$) cuyo volumen es igual al de la parte sumergida
-de ese cuerpo; '', (Cengel and Cimbala, 2020). 
+de ese cuerpo'', (Cengel and Cimbala, 2020). 
 \begin{equation}
 	F_{e}= W = \gamma \cdot  V_{sum} 
 \end{equation}
@@ -115,7 +116,8 @@ total del casco, la cual comprende desde la proa hasta la popa, manga máxima, e
 cuaderna con estructuras asentadas, el calado, es la distancia desde la parte inferior de la quilla a la 
 línea de flotación, el puntal, es la distancia máxima vertical medida desde la quilla hasta cubierta 
 principal, la escora, es el ángulo de inclinación lateral de la embarcación y el asiento, es la diferencia
- en inclinación entre los calados de popa y de proa, esta se clasifica en apopante, apropante y neutro o sentado.
+ en inclinación entre los calados de popa y de proa, esta se clasifica en apopante, 
+ apropante y neutro o sentado. (Benítez y Silva, 2023)
  \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5 \textwidth]{dimensionestemporal.jpg}
