--- a/Fluids.tex
+++ b/Fluids.tex
@@ -84,30 +84,68 @@ El término hidrostática se refiere al estudio de los fluidos en reposo.
 \subsubsection{Fluido}
 \setlength{\parindent}{18pt}
 Un fluido es una sustancia que se deforma continuamente cuando es sometida 
-a un esfuerzo cortante, no importa si el esfuerzo cortante es muy pequeño. (Streter y Wylie, 1997). 
+a un esfuerzo cortante, no importa si el esfuerzo cortante es muy pequeño. (Streter y Wylie 1991, p.3). 
 
 \subsubsection{Principio de Arquímedes}
 \setlength{\parindent}{18pt}
-Se conoce que los barcos flotan, gracias a los aportes realizados por Arquímedes (Principio de Arquímedes);
-la cual establece que, ``La fuerza de flotación que actúa sobre un cuerpo sumergido en un fluido es igual
+Se conoce que los barcos flotan, gracias a los aportes realizados por el físico Arquímedes;
+La fuerza de flotación que actúa sobre un cuerpo sumergido en un fluido es igual
 al peso del fluido desplazado por el cuerpo y actúa hacia arriba pasando por el
 centroide del volumen desplazado. Para los cuerpos flotantes, el peso del cuerpo completo debe ser igual a la fuerza
 de flotación ($F_{e}$), la cual es el peso del fluido ($W$) cuyo volumen es igual al de la parte sumergida
-de ese cuerpo'', (Cengel and Cimbala, 2020). 
+de ese cuerpo, (Cengel and Cimbala 2018, p.101). 
 \begin{equation}
 	F_{e}= W = \gamma \cdot  V_{sum} 
 \end{equation}
 
 \subsubsection{Centro de gravedad}
 \setlength{\parindent}{18pt}
-Es el punto de aplicación del peso del cuerpo y que no varía con la posición del cuerpo. La ubicación del C.G, 
-depende de la forma del objeto, e inclusive pueda que se encuentre fuera del objeto (Hernández et al., 2019).
+La resultante de las fuerzas de gravedad que actúan sobre un cuerpo, el cual conocemos
+como el peso del cuerpo, actúa por un punto denominado centro de gravedad
+del cuerpo. El centro de gravedad entonces se determina por la distribución del peso
+dentro del cuerpo, (Pytel 2009, p.442).
 
+\subsubsection{Metacentro}
+\setlength{\parindent}{18pt}
+El metacentro (mc) se define como
+la intersección del eje vertical de un cuerpo cuando está en su posición de equilibrio,
+con una línea vertical que pasa a través de la posición nueva del centro de flotación
+cuando el cuerpo gira levemente.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6 \textwidth]{Metacentro.png}
+	\caption{ Posición del metacentro. Mott, (2006)}
+	\label{fig:imagen0}
+\end{figure}
+Donde:
+\newline
+\textbf{cg}, es el centro de gravedad.
+\newline
+\textbf{cb}, es el centro geométrico de la carena sumergida.
+\newline
+\textbf{mc}, es el punto de cruce de la línea vertical del centro del cuerpo con el plano de la línea central, 
+conocido como Metacentro.
+
+
+Si \textbf{mc} se sitúa arriba del centro de gravedad, el cuerpo es estable (Mott 2006, p.135).
+
+\subsubsection{Estabilidad}
+\setlength{\parindent}{18pt}
+``La estabilidad se refiere a la
+capacidad que tiene un cuerpo
+de regresar a su posición original
+después de inclinarse con
+respecto de un eje horizontal. La condición de estabilidad para los cuerpos sumergidos por completo en un
+fluido es que su centro de gravedad esté por debajo de su centro de flotabilidad'', (Mott 2006 p.133).
+\subsubsection{Flotabilidad}
+\setlength{\parindent}{18pt}
+``La flotabilidad se define como aquella capacidad que posee un cuerpo para sostenerse dentro de un fluido, 
+donde la fuerza flotación actúa en dirección vertical hacia arriba a través del centroide del volumen 
+desplazado'', (Mott 2006, p.124).
 \subsubsection{Casco de deplazamiento}
 \setlength{\parindent}{18pt}
-Los barcos con cascos de desplazamiento a menudo se distinguen por una forma de ``V'' profunda en la parte 
-inferior o en el casco. Este tipo de casco está diseñado para impulsarse a través del agua, desplazando 
-la superficie del agua en una proporción igual al peso de la embarcación (Escola Port Aula Náutica, 2022).
+``Es el cuerpo de una embarcación, sin contar los elementos móviles como: 
+superestructuras, máquinas, arboladura, pertrechos (recambios), etc.'' (Escola Port Aula Náutica, 2022).
 \subsubsection{Dimensiones del Barco}
 \setlength{\parindent}{18pt}
 Para cualquier diseño de una embarcación que se desea analizar, es necesario conocer cada parte de esta 
@@ -117,111 +155,72 @@ cuaderna con estructuras asentadas, el calado, es la distancia desde la parte in
 línea de flotación, el puntal, es la distancia máxima vertical medida desde la quilla hasta cubierta 
 principal, la escora, es el ángulo de inclinación lateral de la embarcación y el asiento, es la diferencia
  en inclinación entre los calados de popa y de proa, esta se clasifica en apopante, 
- apropante y neutro o sentado. (Benítez y Silva, 2023)
+ apropante y neutro o sentado. (Benítez y Silva 2023, p.5).
  \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5 \textwidth]{dimensionestemporal.jpg}
+	\includegraphics[width=0.8 \textwidth]{dimensionestemporal.jpg}
 	\caption{ Dimensiones de un barco}
 	\label{fig:imagen00}
 \end{figure}
-\subsubsection{Estabilidad}
-\setlength{\parindent}{18pt}
-La estabilidad es la propiedad de un objeto que tiende a volver a su posición original cuando el recipiente 
-se mueve fuera del equilibrio uniforme, bajo la influencia de ciertas fuerzas o momentos restauradores. 
-En un sistema en movimiento, como un objeto en el agua, la estabilidad a menudo requiere una fuerza de 
-restauración y un factor de amortiguamiento (Redín Muñoz, 2007).
-\newpage\
-
-\subsubsection{Metacentro}
-\setlength{\parindent}{18pt}
-El Metacentro, se define como la intercepción del eje vertical de un cuerpo cuando está en su posición 
-de equilibrio, con una línea vertical que pasa a través de la nueva posición del centro de flotación 
-cuando el cuerpo gira.
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.3 \textwidth]{Metacentrotemporal.jpg}
-	\caption{ Posición del metacentro}
-	\label{fig:imagen0}
-\end{figure}
-Donde:
-\newline
-\textbf{G}, es el centro de gravedad.
-\newline
-\textbf{C}, es el centro geométrico de la carena sumergida.
-\newline
-\textbf{M}, es el punto de cruce de la línea vertical del centro del cuerpo con el plano de la línea central, 
-conocido como Metacentro.
-
-
-Si {M} se sitúa arriba del centro de gravedad, el cuerpo es estable (Mott, 2006).
-\subsubsection{Flotabilidad}
-\setlength{\parindent}{18pt}
-La flotabilidad se define como aquella capacidad que posee un cuerpo para sostenerse dentro de un fluido, 
-donde la fuerza flotación actúa en dirección vertical hacia arriba a través del centroide del volumen 
-desplazado, (Mott, 2006).
-%-
 \newpage
-\section{¿Qué se hizo?}
-%contentsline{toc}{section}{¿Qué se hizo?}
-El objetivo de este proyecto fué estudiar el movimiento del casco de un bote y realizar cálculos empíricos
-de su flotabilidad, estabilidad y análisis de fuerzas. En la práctica, se construyó el casco de un barco 
-a escala y se realizaron experimentos para medir.
-\begin{itemize}
-	\item El centro de flotabilidad.
-	\item El metacentro
-	\item
-\end{itemize}
-\section{Materiales y métodos}
+\section{Materiales y máquinas}
 %contentsline{toc}{section}{Materiales y métodos}
 Los materiales utilizados para el desarrollo de este casco fueron:
 \begin{itemize}
-	\item Madera
+	\item Madera (Roble)
 	\item Pintura
 	\item Marcadores
-	\item Resina
-	\item
-	\item
-	\item
+	\item Cincel
+	\item Martillo
+	\item Lápiz
+	\item Escuadra
+	\item Sierra circular
+	\item Lijas
+	\item Pulidora
 \end{itemize}
 
 \newpage
 \section{Contenido y Resultados}
 %contentsline{toc}{section}{Contenido y Resultados}
-Para el desarrollo de este proyecto, hicimos una búsqueda exhaustiva de modelos e ideas para construir el casco del barco:
+El objetivo de este proyecto fué estudiar el movimiento del casco de un bote y realizar cálculos empíricos
+de su flotabilidad, estabilidad y análisis de fuerzas. En la práctica, se construyó el casco de un barco 
+a escala, y luego se realizaron pruebas en condiciones controladas de agua.
+Para el desarrollo de este proyecto, hicimos una búsqueda exhaustiva de modelos e ideas para construir el casco del barco.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1 \textwidth]{imgbarcoplano.png}
+	\includegraphics[width=0.7\textwidth]{planosbarc.png}
 	\caption{ Planos oficiales ClassGlobe 5.80.}
 	\label{fig:imagen}
 \end{figure}
 \begin{itemize}
-	\item A continuación, comenzamos a construir el casco del barco.
+	\item A continuación, tomamos el diseño y las relaciones de medidas, y comenzamos a diseñar el casco de nuestro barco.
 \end{itemize}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{imgbarcofinal.png}
-	\caption{Toma de datos}
+	\includegraphics[width=0.7\textwidth]{Cascobarco.png}
+	\caption{Plano del casco en Autocad}
 	\label{fig:imagen1}
 \end{figure}
 \begin{itemize}
-	\item Luego de esto, pasamos a hacer mediciones y cálculos empíricos:
+	\item Con ayuda de herramientas de carpinteria y la supervision de expertos, logramos un excelente producto final.
 \end{itemize}
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{imgbarcofinal.png}
-	\caption{Barco con los criterios solicitados}
+	\includegraphics[width=1\textwidth]{Collage1.png}
+	\caption{Fases de la construcción y producto final}
 	\label{fig:imagen2}
 \end{figure}
-\begin{itemize}
-	\item Análisis del barco
-\end{itemize}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.8\textwidth]{imgbarcofinal.png}
-	\caption{Carga máxima, centro de gravedad y flotabilidad\ldots}
-	\label{fig:imagen3}
-\end{figure}
 \newpage
+%\begin{itemize}
+	%\item Análisis del barco
+%\end{itemize}
+%\begin{figure}[H]
+	%\centering
+	%\includegraphics[width=0.8\textwidth]{imgbarcofinal.png}
+	%\caption{Carga máxima, centro de gravedad y flotabilidad\ldots}
+	%\label{fig:imagen3}
+%\end{figure}
+%\newpage
 Con SolidWorks Simulation, es posible realizar análisis de elementos finitos (FEA) para determinar las tensiones, deformaciones y factores de seguridad en la herramienta de corte y otras piezas importantes de la máquina.
 Por otro lado, con SolidWorks Motion, es posible simular el movimiento de la máquina y su comportamiento dinámico bajo diferentes condiciones de carga.
 \newline
@@ -252,7 +251,7 @@ A continuación calcularemos:
 \end{itemize}
 \section{Conclusiones}
 %contentsline{toc}{section}{Conclusiones}
-En conclusión, el proyecto de diseño y construcción de un bote basado en los principios de flotabilidad y estabilidad es una oportunidad para aplicar los conocimientos teóricos de la mecánica de fluidos de manera práctica y significativa. A lo largo del proyecto, se han abordado conceptos clave como el principio de Arquímedes, el centro de flotación, la estabilidad y la resistencia hidrodinámica.
+En conclusión, el proyecto de diseño y construcción de un bote basado en los principios de flotabilidad y estabilidad es una oportunidad para aplicar los conocimientos teóricos de la mecánica de fluidos de manera práctica y significativa. A lo largo del proyecto, se han abordado conceptos clave como el principio de Arquímedes, el centro de flotación y la estabilidad.
 El diseño y construcción de un bote que cumpla con los principios mencionados requiere un enfoque integral que considere tanto los aspectos teóricos como los prácticos. Se han explorado conceptos teóricos fundamentales y se han aplicado en la práctica a través de la construcción del bote y la evaluación experimental de su desempeño en términos de flotabilidad y estabilidad.
 Este proyecto ha permitido comprender la relación entre la teoría de la mecánica de fluidos y su aplicación práctica en el diseño y construcción de embarcaciones. Estos conocimientos adquiridos son valiosos tanto en el ámbito académico como en el profesional, ya que la mecánica de fluidos juega un papel fundamental en numerosas disciplinas relacionadas con el diseño
 
