--- a/referenciados.bib
+++ b/referenciados.bib
@@ -43,13 +43,13 @@
   language = "es"
 }
 
-@MASTERSTHESIS{Pacheco2023-yg,
+@MASTERSTHESIS{Benitez2023-yg,
   title    = "DISE{\~N}O {DE} {UN} {CASCO} {PARA} {UN} {VEH{\'I}CULO}
               {ACU{\'A}TICO} {ALIMENTADO} {CON} {ENERG{\'I}A} {SOLAR} ({VAES})
               {EN} {LA} {CUENCA} {BAJA} {DEL} {R{\'I}O} {SIN{\'U}},
               {MONTER{\'I}A-C{\'O}RDOBA}",
-  author   = "Pacheco, Mauricio Jos{\'e} Ben{\'\i}tez and Bello, C{\'e}sar
-              Alexander Silva",
+  author   = "Ben{\'\i}tez, Mauricio Jos{\'e} Pacheco and Silva, C{\'e}sar
+              Alexander Bello",
   year     =  2023,
   school   = "UNIVERSIDAD DE C{\'O}RDOBA",
   language = "en"
